--- a/webscrapper/templates/search.html
+++ b/webscrapper/templates/search.html
@@ -6,6 +6,6 @@
     <title>Job Scrapper</title>
 </head>
 <body>
-    <h1>Serach Result:</h1>
+    <h1>Serach Result for "{{keyword}}":</h1>
 </body>
 </html>
