--- a/webscrapper/templates/search.html
+++ b/webscrapper/templates/search.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Serach Result for "{{keyword}}":</h1>
+    {% for job in jobs %}
+        <div>
+        <span>{{job.position}}</span>
+        <span>{{job.company}}</span>
+        <span>{{job.location}}</span>
+        <a href="{{job.link}}" target="_blank">Apply now &rAarr;</a>
+    </div>
+    {% endfor %}
 </body>
 </html>
