--- a/webscrapper/templates/search.html
+++ b/webscrapper/templates/search.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Scrapper</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 </head>
 <body>
+    <main class="container">
     <h1>Serach Result for "{{keyword}}":</h1>
-    {% for job in jobs %}
-        <div>
-        <span>{{job.position}}</span>
-        <span>{{job.company}}</span>
-        <span>{{job.location}}</span>
-        <a href="{{job.link}}" target="_blank">Apply now &rAarr;</a>
-    </div>
-    {% endfor %}
+       
+    <figure><table role="grid">
+            <thead>
+                <tr>
+                    <th>Position</th>
+                    <th>Company</th>
+                    <th>Location</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for job in jobs %}
+                <tr>
+                <td>{{job.position}}</td>
+                <td>{{job.company}}</td>
+                <td>{{job.location}}</td>
+                <td><a href="{{job.link}}" target="_blank">Apply now &rAarr;</a></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table></figure>
+    </main>
 </body>
 </html>
