--- a/webscrapper/templates/search.html
+++ b/webscrapper/templates/search.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <main class="container">
-    <h1>Serach Result for "{{keyword}}":</h1>
-       
+        <hgroup>
+            <h1>Serach Result for "{{keyword}}":</h1>
+            <a target="_blank" href="/export?keyword={{keyword}}">Export to file</a>
+        </hgroup>
     <figure><table role="grid">
             <thead>
                 <tr>
